# aurora-ib-ws

./: .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: pr-labels.yml  rust-tests.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
